# solana-crowdfunding-platform

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: test.yml
docs/: JIRA_TASKS.md  PROJECT_CONTEXT.md  SETUP.md  TASK_TRACKING.md
programs/vault_raise/: Cargo.toml
programs/vault_raise/src/: errors.rs  events.rs  lib.rs  state.rs
programs/vault_raise/src/instructions/: campaign.rs  contribution.rs  governance.rs  mod.rs  native_sol.rs
programs/vault_raise/tests/: campaign_creation.rs  contribution_flow.rs  governance_flow.rs  refund_flow.rs  withdraw_flow.rs
scripts/: devnet_test.ts  enter-wsl.ps1
tests/: vault_raise.ts
