[package]
name = "vault_raise"
version = "0.1.0"
description = "Solana crowdfunding escrow program"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_raise"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }

[dev-dependencies]
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
solana-system-interface = "1.0.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

# Declare cfg values used internally by Anchor and Solana macros
# so rustc does not emit unexpected_cfgs warnings.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))',
] }
